# mcp-rust-sample

./: Cargo.toml
src/: main.rs
