[package]
name = "mcp-rust-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
rmcp = { version = "0.1.5", features = ["server", "transport-sse-server", "transport-io"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }
